--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["Triet Trinh <email@trinhminhtriet.com>"]
 description = "ScanR: A lightweight, fast, and configurable port scanner built in Rust for reliable multi-platform network scanning."
 repository = "https://github.com/trinhminhtriet/scanr"
-homepage = "https://github.com/trinhminhtriet/scanr"
+homepage = "https://trinhminhtriet.com"
 license = "MIT"
 readme = "README.md"
 keywords = ["docker", "scanr", "port", "scan", "tokio"]
