fix email address

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "scanr"
 version = "0.1.0"
 edition = "2021"
-authors = ["Triet Trinh <email@trinhminhtriet.com>"]
+authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
 description = "ScanR: A lightweight, fast, and configurable port scanner built in Rust for reliable multi-platform network scanning."
 repository = "https://github.com/trinhminhtriet/scanr"
 homepage = "https://trinhminhtriet.com"
