--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,42 +1,50 @@
-name: "Release"
+name: Release
 
 on:
+  push:
+    tags:
+      - "v*" # Push events to every tag not containing /
   workflow_dispatch:
-  release:
-    types: [created]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  release:
-    timeout-minutes: 30
-    name: release ${{ matrix.target }}
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        target:
-          [
-            x86_64-pc-windows-gnu,
-            x86_64-unknown-linux-musl,
-            x86_64-apple-darwin,
-          ]
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - name: Cache Crates
-        uses: actions/cache@v3
+      - name: Check out the repository
+        uses: actions/checkout@v2
+
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
         with:
-          path: |
-            ./target
-            ~/.cargo
-          key: ${{ runner.os }}-${{ hashFiles('Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}
-      - name: Compile and release
-        uses: rust-build/rust-build.action@latest
+          toolchain: stable
+
+      - name: Build the project
+        run: cargo build --release
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: release-binary
+          path: target/release/
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out the repository
+        uses: actions/checkout@v2
+
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+
+      - name: Publish to crates.io
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RUSTTARGET: ${{ matrix.target }}
-          EXTRA_FILES: "README.md"
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        run: cargo publish
