Add Cargo configuration and optimize release profile settings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,6 @@ warp = "0.3"
 lto = true
 codegen-units = 1
 panic = "abort"
-strip = true
+strip = "none"
 debug = false
-opt-level = "z"
+opt-level = 3
