--- a/.editorconfig
+++ b/.editorconfig
@@ -6,25 +6,25 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
-indent_size = 4
+indent_size = 2
 max_line_length = off
 
 [*.rs]
 indent_size = 4
-max_line_length = 100
+max_line_length = 500
 
-[*.yml, *.yaml]
+[*.yml]
 indent_size = 2
 indent_style = space
 
 [*.toml]
-indent_size = 4
+indent_size = 2
+indent_style = space
 
 [*.sh]
 indent_size = 2
 indent_style = space
 
 [*.md]
-trim_trailing_whitespace = false
-max_line_length = off
-indent_size = 2
+trim_trailing_whitespace = false  # Allow trailing spaces in markdown
+max_line_length = off  # Disable line length limits for prose
